AtikCamerasSDK/example/C++ Example/AtikCamerasSDKExample/AtikCameras.h



	// Colour properties
	enum ARTEMISCOLOURTYPE
	{
		ARTEMIS_COLOUR_UNKNOWN = 0,
		ARTEMIS_COLOUR_NONE,
		ARTEMIS_COLOUR_RGGB
	};


	// Connection State:
	enum ARTEMISCONNECTIONSTATE
	{
		CAMERA_CONNECTING      = 1,
		CAMERA_CONNECTED       = 2,
		CAMERA_CONNECT_FAILED  = 3,
		CAMERA_SUSPENDED       = 4,
		CAMERA_CONNECT_UNKNOWN = 5
	};


	//Structures

	// camera/CCD properties
	struct ARTEMISPROPERTIES
	{
		int Protocol;
		int nPixelsX;
		int nPixelsY;
		float PixelMicronsX;
		float PixelMicronsY;
		int ccdflags;
		int cameraflags;
		char Description[40];
		char Manufacturer[40];
	};


	typedef void * ArtemisHandle;

	// -------------------  DLL --------------------------
	artfn int  ArtemisAPIVersion();

	artfn int  ArtemisDLLVersion();

	artfn void ArtemisSetDebugCallback(void(*callback)(const char *message));

	artfn void ArtemisSetDebugCallbackContext(void * context, void(*callback)(void * context, const char *message));

	artfn void ArtemisShutdown();

	artfn BOOL			ArtemisDevicePresent(  int iDevice);


	artfn BOOL			ArtemisDeviceName(          int iDevice, char *pName);

	artfn BOOL			ArtemisDeviceSerial(        int iDevice, char *pSerial);

	artfn BOOL			ArtemisDeviceIsCamera(      int iDevice);

	artfn BOOL			ArtemisDeviceHasFilterWheel(int iDevice);


	artfn ArtemisHandle	ArtemisConnect(    int iDevice);

	artfn BOOL			ArtemisIsConnected(ArtemisHandle handle);

	artfn BOOL			ArtemisDisconnect( ArtemisHandle handle);

	artfn int			ArtemisRefreshDevicesCount();



	// ------------------- Camera Info -----------------------------------
	artfn int ArtemisCameraSerial(		   ArtemisHandle handle, int* flags, int* serial);

	artfn int ArtemisColourProperties(	   ArtemisHandle handle, ARTEMISCOLOURTYPE *colourType, int *normalOffsetX, int *normalOffsetY, int *previewOffsetX, int *previewOffsetY);

	artfn int ArtemisProperties(		   ArtemisHandle handle, struct ARTEMISPROPERTIES *pProp);

	artfn int ArtemisCameraConnectionState(ArtemisHandle handle, ARTEMISCONNECTIONSTATE * state);


	// ------------------- Exposure Settings -----------------------------------
	artfn int  ArtemisBin(								ArtemisHandle handle, int  x, int  y);

	artfn int  ArtemisGetBin(							ArtemisHandle handle, int *x, int *y);

	artfn int  ArtemisGetMaxBin(						ArtemisHandle handle, int *x, int *y);

	artfn int  ArtemisGetSubframe(						ArtemisHandle handle, int *x, int *y, int *w, int *h);

	artfn int  ArtemisSubframe(							ArtemisHandle handle, int  x, int  y, int  w, int  h);

	artfn int  ArtemisSubframePos(						ArtemisHandle handle, int  x, int y);

	artfn int  ArtemisSubframeSize(						ArtemisHandle handle, int  w, int h);

	artfn int  ArtemisSetSubSample(						ArtemisHandle handle, bool bSub);

	artfn BOOL ArtemisGetContinuousExposingMode(		ArtemisHandle handle);

	artfn int  ArtemisSetContinuousExposingMode(		ArtemisHandle handle, bool bEnable);

	artfn BOOL ArtemisGetDarkMode(						ArtemisHandle handle);

	artfn int  ArtemisSetDarkMode(						ArtemisHandle handle, bool bEnable);

	artfn int  ArtemisSetPreview(						ArtemisHandle handle, bool bPrev);

	artfn int  ArtemisAutoAdjustBlackLevel(				ArtemisHandle handle, bool bEnable);

	artfn int  ArtemisPrechargeMode(					ArtemisHandle handle, int mode);

	artfn int  ArtemisEightBitMode(						ArtemisHandle handle, bool eightbit);

	artfn int  ArtemisStartOverlappedExposure(			ArtemisHandle handle);

	artfn BOOL ArtemisOverlappedExposureValid(			ArtemisHandle handle);

	artfn int  ArtemisSetOverlappedExposureTime(		ArtemisHandle handle, float fSeconds);



	// ------------------- Exposures -----------------------------------
	artfn int   ArtemisStartExposure(			 ArtemisHandle handle, float seconds);

	artfn int   ArtemisStartExposureMS(			 ArtemisHandle handle, int ms);

	artfn int   ArtemisAbortExposure(			 ArtemisHandle handle);

	artfn int   ArtemisStopExposure(			 ArtemisHandle handle);

	artfn BOOL  ArtemisImageReady(				 ArtemisHandle handle);

	artfn int   ArtemisCameraState(				 ArtemisHandle handle);

	artfn float ArtemisExposureTimeRemaining(	 ArtemisHandle handle);

	artfn int   ArtemisDownloadPercent(			 ArtemisHandle handle);

	artfn int   ArtemisGetImageData(			 ArtemisHandle handle, int *x, int *y, int *w, int *h, int *binx, int *biny);

	artfn void* ArtemisImageBuffer(				 ArtemisHandle handle);

	artfn float ArtemisLastExposureDuration(	 ArtemisHandle handle);

	artfn char* ArtemisLastStartTime(			 ArtemisHandle handle);

	artfn int   ArtemisLastStartTimeMilliseconds(ArtemisHandle handle);

	
	artfn BOOL ArtemisHasFastMode(      ArtemisHandle handle);

	artfn BOOL ArtemisStartFastExposure(ArtemisHandle handle, int ms);

	artfn BOOL ArtemisSetFastCallback(  ArtemisHandle handle, void(*callback)(ArtemisHandle handle, int x, int y, int w, int h, int binx, int biny, void * imageBuffer));


	// ------------------- Amplifier -----------------------------------
	artfn int  ArtemisAmplifier(		   ArtemisHandle handle, bool bOn);

	artfn BOOL ArtemisGetAmplifierSwitched(ArtemisHandle handle);

	artfn int  ArtemisSetAmplifierSwitched(ArtemisHandle handle, bool bSwitched);


	// ------------------- Column Repair ----------------------------------	
	artfn int ArtemisSetColumnRepairColumns(		ArtemisHandle handle, int   nColumn, unsigned short * columns);

	artfn int ArtemisGetColumnRepairColumns(		ArtemisHandle handle, int * nColumn, unsigned short * columns);

	artfn int ArtemisClearColumnRepairColumns(		ArtemisHandle handle);

	artfn int ArtemisSetColumnRepairFixColumns(		ArtemisHandle handle, bool value);

	artfn int ArtemisGetColumnRepairFixColumns(		ArtemisHandle handle, bool * value);

	artfn int ArtemisGetColumnRepairCanFixColumns(	ArtemisHandle handle, bool * value);


	// ------------------- Gain ----------------------------------
	artfn int ArtemisGetGain(ArtemisHandle handle, bool isPreview, int *gain, int *offset);

	artfn int ArtemisSetGain(ArtemisHandle handle, bool isPreview, int  gain, int  offset);


	// ------------------- Temperature -----------------------------------
	artfn int ArtemisTemperatureSensorInfo(ArtemisHandle handle, int sensor, int* temperature);

	artfn int ArtemisSetCooling(		   ArtemisHandle handle, int setpoint);

	artfn int ArtemisCoolingInfo(		   ArtemisHandle handle, int* flags, int* level, int* minlvl, int* maxlvl, int* setpoint);

	artfn int ArtemisCoolerWarmUp(		   ArtemisHandle handle);

	artfn int ArtemisGetWindowHeaterPower( ArtemisHandle handle, int* windowHeaterPower);

	artfn int ArtemisSetWindowHeaterPower( ArtemisHandle handle, int  windowHeaterPower);